--- a/index.html
+++ b/index.html
@@ -1,7 +1,106 @@
-Ajeet Its Services oline
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ajeet Apps & Technologies</title>
+    <style>
+        :root {
+            --primary-color: #2563eb;
+            --secondary-color: #1e293b;
+            --text-color: #334155;
+            --bg-color: #f8fafc;
+        }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            line-height: 1.6;
+        }
+        header {
+            background: linear-gradient(135deg, var(--primary-color), #3b82f6);
+            color: white;
+            padding: 3rem 1rem;
+            text-align: center;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+        }
+        .container {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 0 1.5rem;
+        }
+        .card {
+            background: white;
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+            margin-bottom: 2rem;
+        }
+        h1 { margin: 0; font-size: 2.5rem; }
+        h2 { color: var(--secondary-color); border-bottom: 2px solid var(--primary-color); padding-bottom: 0.5rem; }
+        .details-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 1rem;
+            margin-top: 1rem;
+        }
+        .detail-item b { color: var(--secondary-color); }
+        footer {
+            text-align: center;
+            padding: 2rem;
+            font-size: 0.9rem;
+            color: #64748b;
+        }
+        @media (max-width: 600px) {
+            .details-grid { grid-template-columns: 1fr; }
+        }
+    </style>
+</head>
+<body>
 
-village Shahpur Chainpur 
-post uspar
-Mathura 
+<header>
+    <h1>Ajeet Apps & Technologies</h1>
+    <p>Innovating Mobile Solutions with Precision</p>
+</header>
 
- email. Ajitontrol@gmail.com
+<div class="container">
+    <section class="card">
+        <h2>About Our Organization</h2>
+        <p>We are a verified technology startup focused on building high-quality, user-centric mobile applications. Registered under the Udyam initiative, we strive to solve real-world problems through logic and clean code.</p>
+    </section>
+
+    <section class="card">
+        <h2>Official Verification Details</h2>
+        <p>This information is provided for Google Play Console verification and matches our official records.</p>
+        <div class="details-grid">
+            <div class="detail-item">
+                <b>Legal Company Name:</b><br>
+                [Yahan Apna Udyam/D-U-N-S wala Naam Likho]
+            </div>
+            <div class="detail-item">
+                <b>Registration Type:</b><br>
+                Udyam Registered Micro Enterprise
+            </div>
+            <div class="detail-item">
+                <b>Registered Address:</b><br>
+                [Yahan Apna Pura Address Likho jo D-U-N-S mein hai]
+            </div>
+            <div class="detail-item">
+                <b>Contact Email:</b><br>
+                [Apna Official Email Likho]
+            </div>
+        </div>
+    </section>
+</div>
+
+<footer>
+    <p>&copy; 2026 Ajeet Apps & Technologies. All rights reserved.</p>
+    <p>Hosted securely on GitHub Pages.</p>
+</footer>
+
+</body>
+</html>
+
+ 
