--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 </head>
 <body>
 
-    <header id="app-header">Air Force Y Group Prep</header>
+    <header id="app-header">Air Force X And Y Group Prep</header>
 
     <div id="home" class="screen active-screen">
         <div class="card">
-            <h2>Welcome Future Airman! ✈️</h2>
+            <h2>Welcome Air force y group aspirants ✈️</h2>
             <p>Ready to start your journey? Learning here is an easy and thrilling game. Dive into the theory, take the quizzes, and enjoy the process of leveling up your knowledge every single day.</p>
         </div>
         <div class="card">
