--- a/index.html
+++ b/index.html
@@ -215,5 +215,28 @@
             showLevelScreen();
         }
     </script>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCTfh9Er1sf_8jEhFWMwr_KzeNda8DOUPU",
+    authDomain: "airforce-preparation.firebaseapp.com",
+    projectId: "airforce-preparation",
+    storageBucket: "airforce-preparation.firebasestorage.app",
+    messagingSenderId: "837438507008",
+    appId: "1:837438507008:web:9e514541763379d16cb0e5",
+    measurementId: "G-V7DNC7CXLM"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+    </script>
 </body>
 </html>
